@@ -15,7 +15,7 @@
  */
 package org.summerboot.jexpress.boot.event;
 
-import org.summerboot.jexpress.boot.SummerRunner;
+import org.summerboot.jexpress.boot.SummerApplication;
 import org.summerboot.jexpress.boot.config.JExpressConfig;
 
 import java.io.File;
@@ -24,11 +24,11 @@ import java.io.File;
  * @author Changski Tie Zheng Zhang 张铁铮, 魏泽北, 杜旺财, 杜富贵
  */
 public interface AppLifecycleListener {
-    void beforeApplicationStart(SummerRunner.RunnerContext context) throws Exception;
+    void beforeApplicationStart(SummerApplication.AppContext context) throws Exception;
 
-    void onApplicationStart(SummerRunner.RunnerContext context, String appVersion, String fullConfigInfo) throws Exception;
+    void onApplicationStart(SummerApplication.AppContext context, String appVersion, String fullConfigInfo) throws Exception;
 
-    void onApplicationStop(SummerRunner.RunnerContext context, String appVersion);
+    void onApplicationStop(SummerApplication.AppContext context, String appVersion);
 
     /**
      * called when application paused or resumed by configuration/pause file or BottController's ${context-root}/status?pause=true|false
@@ -38,9 +38,9 @@ public interface AppLifecycleListener {
      * @param serviceStatusChanged true if service status changed
      * @param reason               the reason
      */
-    void onApplicationStatusUpdated(SummerRunner.RunnerContext context, boolean healthOk, boolean paused, boolean serviceStatusChanged, String reason) throws Exception;
+    void onApplicationStatusUpdated(SummerApplication.AppContext context, boolean healthOk, boolean paused, boolean serviceStatusChanged, String reason) throws Exception;
 
-    void onHealthInspectionFailed(SummerRunner.RunnerContext context, boolean healthOk, boolean paused, long retryIndex, int nextInspectionIntervalSeconds) throws Exception;
+    void onHealthInspectionFailed(SummerApplication.AppContext context, boolean healthOk, boolean paused, long retryIndex, int nextInspectionIntervalSeconds) throws Exception;
 
     void onConfigChangeBefore(File configFile, JExpressConfig cfg);
 
